{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 47,
  "lineage": "042203ba-f889-ea8f-a0ca-f635626eeb9d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:773662384147:route-table/rtb-048705f6ed0438323",
            "default_route_table_id": "rtb-048705f6ed0438323",
            "id": "rtb-048705f6ed0438323",
            "owner_id": "773662384147",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-082224f318d50a98f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route to Internet"
            },
            "tags_all": {
              "Name": "Route to Internet"
            },
            "timeouts": null,
            "vpc_id": "vpc-04a63a968890eff1c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.vpc-gateway",
            "aws_vpc.lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "EC2_lab",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00c39f71452c08778",
            "arn": "arn:aws:ec2:us-east-1:773662384147:instance/i-033b6b80813181402",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-033b6b80813181402",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform_ec2_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05056ac63348c6604",
            "private_dns": "ip-192-168-1-7.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.7",
            "public_ip": "54.160.206.247",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0837d981a9f367e5f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0c080f15ded528a45"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f0c783c06203900c",
            "tags": {
              "Name": "EC2 for VPC 1",
              "Owner": "erkin"
            },
            "tags_all": {
              "Name": "EC2 for VPC 1",
              "Owner": "erkin"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c080f15ded528a45"
            ]
          },
          "dependencies": [
            "aws_key_pair.tf_ec2_public_key",
            "aws_security_group.allow_ssh_and_http",
            "aws_subnet.public_subnets"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00c39f71452c08778",
            "arn": "arn:aws:ec2:us-east-1:773662384147:instance/i-0e1870f7dcfb8c221",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e1870f7dcfb8c221",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform_ec2_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04e7e0a9b80846f74",
            "private_dns": "ip-192-168-2-23.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.2.23",
            "public_ip": "54.242.96.33",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06c38abbfb55d6ac3",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0c080f15ded528a45"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0997ff097ac32be07",
            "tags": {
              "Name": "EC2 for VPC 2",
              "Owner": "erkin"
            },
            "tags_all": {
              "Name": "EC2 for VPC 2",
              "Owner": "erkin"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c080f15ded528a45"
            ]
          },
          "dependencies": [
            "aws_key_pair.tf_ec2_public_key",
            "aws_security_group.allow_ssh_and_http",
            "aws_subnet.public_subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:773662384147:internet-gateway/igw-082224f318d50a98f",
            "id": "igw-082224f318d50a98f",
            "owner_id": "773662384147",
            "tags": {
              "Name": "VPC IGW",
              "Owner": "erkin"
            },
            "tags_all": {
              "Name": "VPC IGW",
              "Owner": "erkin"
            },
            "vpc_id": "vpc-04a63a968890eff1c"
          },
          "dependencies": [
            "aws_vpc.lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eec9bdc6dfb0901b",
            "route_table_id": "rtb-048705f6ed0438323",
            "subnet_id": "subnet-0f0c783c06203900c"
          },
          "dependencies": [
            "aws_subnet.public_subnets",
            "aws_vpc.lab-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f1eb079550524426",
            "route_table_id": "rtb-048705f6ed0438323",
            "subnet_id": "subnet-0997ff097ac32be07"
          },
          "dependencies": [
            "aws_subnet.public_subnets",
            "aws_vpc.lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh_and_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:773662384147:security-group/sg-0c080f15ded528a45",
            "description": "Allow SSH and HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c080f15ded528a45",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH for VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_ssh_and_http",
            "name_prefix": "",
            "owner_id": "773662384147",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh_and_http",
              "Owner": "erkin"
            },
            "tags_all": {
              "Name": "allow_ssh_and_http",
              "Owner": "erkin"
            },
            "timeouts": null,
            "vpc_id": "vpc-04a63a968890eff1c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:773662384147:subnet/subnet-0f0c783c06203900c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f0c783c06203900c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "773662384147",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC Public Subnet 1",
              "Owner": "erkin"
            },
            "tags_all": {
              "Name": "VPC Public Subnet 1",
              "Owner": "erkin"
            },
            "vpc_id": "vpc-04a63a968890eff1c"
          },
          "dependencies": [
            "aws_vpc.lab-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:773662384147:subnet/subnet-0997ff097ac32be07",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0997ff097ac32be07",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "773662384147",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC Public Subnet 2",
              "Owner": "erkin"
            },
            "tags_all": {
              "Name": "VPC Public Subnet 2",
              "Owner": "erkin"
            },
            "vpc_id": "vpc-04a63a968890eff1c"
          },
          "dependencies": [
            "aws_vpc.lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "lab-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:773662384147:vpc/vpc-04a63a968890eff1c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0249b52133a64a622",
            "default_route_table_id": "rtb-048705f6ed0438323",
            "default_security_group_id": "sg-09460b4878310be9e",
            "dhcp_options_id": "dopt-00df009cd46d1b882",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04a63a968890eff1c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-048705f6ed0438323",
            "owner_id": "773662384147",
            "tags": {
              "Name": "TF-LAB-VPC"
            },
            "tags_all": {
              "Name": "TF-LAB-VPC"
            }
          }
        }
      ]
    }
  ]
}